<resources>
    <string name="app_name">Ejercicio2</string>
    <string name="title_activity_main_student">MainStudent</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="house">House:</string>
    <string name="actor">Actor:</string>
    <string name="ancestry">Ancestry:</string>
    <string name="patronus">Patronus:</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="species">Specie:</string>
    <string name="harry_potter">Harry Potter</string>
    <string name="estudiantes_de_hogwarts">Estudiantes de Hogwarts</string>
    <string name="personal_de_hogwarts">Personal de Hogwarts</string>
</resources>